2009-08-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs #2834246, #2833614 and #2830990.
	* Fixed Gameplay options gump to refer to the new translucent colors.

2009-07-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Changing version string to "svn" instead of "cvs" (bug #2822452).
	* SDL video driver on Mac OS X is set to x11 if Exult Studio support is on.
	* Fixed bug #2816756.
	* Added default avatar_data.txt for new games created with ES.

2009-07-16	Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation,FAQ and README.MacOSX
	
2009-07-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* A few compilation fixes/improvements for Mac OS X (courtesy of Dominus).

2009-07-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/exult_studio.glade: Fixed a couple mislabeled flags in the NPC
	  editing window.
	* audio/midi_drivers/ALSAMidiDriver.cpp: Fixed invalid conversion.
	* data/Makefile.am: Remove error with 'make install'.

2009-06-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc: --buildmap can now be used for maps other than map 0 through the
	  "--mapnum <N>" parameter Disallowed --game if the game had been specified
	  otherwise (--bg, --si, --fov, --ss).
	* shapeid.*, docs/u7tech.txt, fnames.h, palettes.cc, win32/*, data/*: There
	  were actually 17, not 11, xform tables used in the original games; Exult
	  now implements the other 6. OpenGL/fallback blends are now specified in
	  a file called "blends.dat" (which is bundled in exult_XX.flx for BG/SI).
	  XForms are now patcheable (as is this new blends file). There is still a
	  fallback hard-coded blend set just in case. A blends.dat file is included
	  for new games.
	* shapes/vgafile.*: Fixed memory leaks.
	* segfile.*, msvc9/*, msvcstuff/*, Makefile.{common,am}: A segfile was a
	  stripped-down version of a flex reader used only once; it has have been
	  removed.
	* All others: Cleanup/proper verification if read file object is valid.
